# bom-spot

./: cli_plugins.yaml  pyproject.toml
bom_spot/: __init__.py  __main__.py  dataset_viewer_pipeline.py  motion_tracker_pipeline.py  sqlite_particle_filter_pipeline.py
bom_spot/decorators/: debug.py  save_img_result.py  save_video_result.py  show_result.py
bom_spot/mixins/: baboons_mixin.py  foreground_mixin.py  frame_mixin.py  history_frames_mixin.py  history_of_dissimilarity_mixin.py  moving_foreground_mixin.py  particle_filter_history_mixin.py  preprocessed_frame_mixin.py  shifted_history_frames_mixin.py  shifted_masks_mixin.py  weights_mixin.py
bom_spot/models/: bayesian_region.py  particle_filter.py
bom_spot/stages/: dead_reckoning.py  get_region_file_region.py  get_sqlite_baboon.py  get_video_frame.py  overlay.py  particle_filter.py  repeat_video_frame.py  save_computed_regions.py  save_hysteresis_regions.py  save_motion_regions.py  save_regions.py
bom_spot/stages/motion_detector/: apply_masks.py  compute_moving_foreground.py  compute_transformation_matrices.py  detect_blobs.py  generate_weights.py  min_size_filter.py  motion_detector.py  quantize_history_frames.py  store_history_frame.py
bom_spot/stages/motion_detector/generate_mask_subcomponents/: generate_history_of_dissimilarity.py  generate_mask_subcomponents.py
bom_spot/stages/preprocess/: blur_gray.py  convert_from_bgr2gray.py  denoise.py  denoise_color.py  feature_reduction_pca.py  preprocess_frame.py
tests/: test_module.py
tests/integration/: motion_tracker_plugin.py
(+13 files in other folders)
