[tool.poetry]
name = "bom-spot"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
opencv-contrib-python = "^4.8.1.78"
backoff = "^2.2.1"
scikit-learn = "^1.5.0"
rx = "^3.2.0"
numba = "^0.58.1"
bom-pipeline = {git = "https://github.com/UCSD-E4E/bom-pipeline", rev = "main"}
bom-common = {git = "https://github.com/UCSD-E4E/bom-common", rev = "main"}

[tool.poetry.dev-dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
